Regular Expression Syntax Cheat Sheet

--- a/content/230731_1000.mdx
+++ b/content/230731_1000.mdx
@@ -1,108 +1,125 @@
-# Regular Expression Syntax Cheat Sheet
+# 🧪 Regular Expression Syntax Cheat Sheet
 
-Regular expressions (regex or regexp) are a pattern of characters that describe an amount of text.
+Regular expressions (regex or regexp) are patterns used to match character combinations in strings.
 
-## Anchors
+---
 
-Anchors match a position before or after other characters.
+## 🔗 Anchors
 
-| **Syntax** | **Description**                                              | **Example pattern** | **Example matches**                 | **Example non-matches**   |
-| ---------- | ------------------------------------------------------------ | ------------------- | ----------------------------------- | ------------------------- |
-| `^`        | match start of line                                          | `^r`                | `r`abbit<br/>`r`accoon              | parrot<br/>ferret         |
-| `$`        | match end of line                                            | `t$`                | rabbi`t`<br/>foo`t`                 | trap<br/>star             |
-| `\A`       | match start of line                                          | `\Ar`               | `r`abbit<br/>`r`accoon              | parrot<br/>ferret         |
-| `\Z`       | match end of line                                            | `t\Z`               | rabbi`t`<br/>foo`t`                 | trap<br/>star             |
-| `\b`       | match characters at the start or end of a word               | `\bfox\b`           | the red `fox` ran<br/>the `fox` ate | foxtrot<br/>foxskin scarf |
-| `\B`       | match characters in the middle of other non-space characters | `\Bee\B`            | tr`ee`s<br/>b`ee`f                  | bee<br/>tree              |
+Anchors match positions within text, not actual characters.
 
-## Matching types of character
+| **Syntax** | **Description**                                | **Example pattern** | **Matches**                       | **Non-matches**         |
+| ---------- | ---------------------------------------------- | ------------------- | --------------------------------- | ----------------------- |
+| `^`        | Start of a **line**                            | `^r`                | `r`abbit, `r`accoon               | parrot, ferret          |
+| `$`        | End of a **line**                              | `t$`                | rabbi`t`, foo`t`                  | trap, star              |
+| `\A`       | Start of a **string**                          | `\Ar`               | `r`abbit (at start)              | parrot, inner matches   |
+| `\Z`       | End of a **string**                            | `t\Z`               | rabbi`t` (at end)                | trap, inner matches     |
+| `\b`       | Word boundary (start or end of a word)         | `\bfox\b`           | the `fox`, red `fox`             | foxtrot, foxskin        |
+| `\B`       | Not a word boundary                            | `\Bee\B`            | tr`ee`s, b`ee`f                   | bee, tree               |
 
-Rather than matching specific characters, you can match specific types of characters such as letters, numbers, and more.
+---
 
-| **Syntax**       | **Description**                                      | **Example pattern** | **Example matches**                           | **Example non-matches**         |
-| ---------------- | ---------------------------------------------------- | ------------------- | --------------------------------------------- | ------------------------------- |
-| `.`              | Anything except for a linebreak                      | `c.e`               | `cle`an<br/>`che`ap                           | acert<br/>cent                  |
-| `\d`             | match a digit                                        | `\d`                | `6060`-`842`<br/>`2`b<code>&#124;</code>^`2`b | two<br/>\*\*\_\_\_              |
-| `\D`             | Match a non-digit                                    | `\D`                | `The` 5 `cats ate`<br/>12 `Angry men`         | 52<br/>10032                    |
-| `\w`             | Match word characters                                | `\wee\w`            | tr`ees`<br/>b`ee4`                            | The bee<br/>eels eat meat       |
-| `\W`             | Match non-word characters                            | `\Wbat\W`           | At `bat`<br/>Swing the `bat` fast             | wombat<br/>bat53                |
-| `\s`             | Match whitespace                                     | `\sfox\s`           | the `fox` ate<br/>his `fox` ran               | it's the fox.<br/>foxfur        |
-| `\S`             | Match non-whitespace                                 | `\See\S`            | tr`ees`<br/>`beef`                            | the bee stung<br/>The tall tree |
-| `\metacharacter` | Escape a metacharacter to match on the metacharacter | `\.`<br/>`\^`       | The cat ate`.`<br/>2`^`3                      | the cat ate<br/>23              |
+## 🔤 Character Types
 
-## Character classes
+Match specific categories of characters.
 
-Character classes are sets or ranges of characters.
+| **Syntax** | **Description**                     | **Example pattern** | **Matches**                    | **Non-matches**          |
+| ---------- | ----------------------------------- | ------------------- | ------------------------------ | ------------------------ |
+| `.`        | Any character except newline        | `c.e`               | `cle`an, `che`ap               | acert, cent              |
+| `\d`       | Digit (`0-9`)                       | `\d`                | 6`0`60, `2`b                   | two, words               |
+| `\D`       | Non-digit                           | `\D`                | The, cats, `ate`               | 52, 10032                |
+| `\w`       | Word character `[a-zA-Z0-9_]`       | `\wee\w`            | tr`ees`, b`ee4`                | bee, eels                |
+| `\W`       | Non-word character                  | `\Wbat\W`           | ` bat `, `,bat.`               | wombat, bat53            |
+| `\s`       | Whitespace                          | `\sfox\s`           | ` fox `                        | fox., foxfur             |
+| `\S`       | Non-whitespace                      | `\See\S`            | tr`ees`, `beef`                | tall tree, bee stung     |
+| `\x`       | Escaped metacharacter (e.g. `\.`)   | `\.`                | `.` (literal dot)              | dot                      |
 
-| **Syntax** | **Description**                                 | **Example pattern** | **Example matches**       | **Example non-matches** |
-| ---------- | ----------------------------------------------- | ------------------- | ------------------------- | ----------------------- |
-| `[xy]`     | match several characters                        | `gr[ea]y`           | `gray`<br/>`grey`         | green<br/>greek         |
-| `[x-y]`    | match a range of characters                     | `[a-e]`             | `a`m`be`r<br/>`b`r`a`n`d` | fox<br/>join            |
-| `[^xy]`    | Does not match several characters               | `gr[^ea]y`          | `green`<br/>`greek`       | gray <br/>grey          |
-| `[\^-]`    | match metacharacters inside the character class | `4[\^\.-+*/]\d`     | `4^3` <br/>`4.2`          | 44 <br/>23              |
+---
 
-## Repetition
+## 🧱 Character Classes
 
-Rather than matching single instances of characters, you can match repeated characters.
+Define a set of characters or ranges to match.
 
-| **Syntax**       | **Description**                                                | **Example pattern** | **Example matches**      | **Example non-matches** |
-| ---------------- | -------------------------------------------------------------- | ------------------- | ------------------------ | ----------------------- |
-| `x*`             | match zero or more times                                       | `ar*o`              | cac`ao`<br/>c`arro`t     | arugula<br/>artichoke   |
-| `x+`             | match one or more times                                        | `re+`               | g`ree`n<br/>t`ree`       | trap<br/>ruined         |
-| `x?`             | Match zero or one times                                        | `ro?a`              | `roa`st<br/>`ra`nt       | root<br/>rear           |
-| `x{m}`           | match m times                                                  | `\we{2}\w`          | `deer`<br/>`seer`        | red<br/>enter           |
-| `x{m,}`          | match m or more times                                          | `2{3,}4`            | 671-`2224`<br/>`2222224` | 224<br/>123             |
-| `x{m,n}`         | match between m and n times                                    | `12{1,3}3`          | `123`4<br/>`12223`84     | 15335<br/>1222223       |
-| `x*?, x+?, etc.` | match the minimum number of times - known as a lazy quantifier | `re+?`              | t`re`e<br/>f`re`eeee     | trout<br/>roasted       |
+| **Syntax** | **Description**                  | **Example pattern** | **Matches**         | **Non-matches**     |
+| ---------- | -------------------------------- | ------------------- | ------------------- | ------------------- |
+| `[xy]`     | Match any character in set       | `gr[ea]y`           | `gray`, `grey`      | green, greek        |
+| `[x-y]`    | Match a character in range       | `[a-e]`             | `a`, `b`, `c`       | `f`, `z`            |
+| `[^xy]`    | Not any character in set         | `gr[^ea]y`          | `gruy`              | gray, grey          |
+| `[\^-]`    | Match a literal `^` or `-`       | `4[\^.-]\d`         | `4^3`, `4-2`        | `44`, `23`          |
 
-## Capturing, alternation & backreferences
+---
 
-In order to extract specific parts of a string, you can capture those parts, and even name the parts that you captured.
+## 🔁 Repetition
 
-| **Syntax**              | **Description**                                                      | **Example pattern**            | **Example matches**                      | **Example non-matches** |
-| ----------------------- | -------------------------------------------------------------------- | ------------------------------ | ---------------------------------------- | ----------------------- |
-| `(x)`                   | capturing a pattern                                                  | `(iss)+`                       | M`ississi`ppi<br/>mi`ss`ed               | mist<br/>persist        |
-| `(?:x)`                 | create a group without capturing                                     | `(?:ab)(cd)`                   | Match:<br/>`abcd`<br/>Group 1: `cd`      | acbd                    |
-| `(?<name>x)`            | create a named capture group                                         | `(?<first>\d)(?<scrond>\d)\d*` | Match: `1325`<br/>first: 1<br/>second: 3 | 2<br/>hello             |
-| <code>(x&#124;y)</code> | match several alternative patterns                                   | <code>(re&#124;ba)</code>      | `re`d<br/>`ba`nter                       | rant<br/>bear           |
-| `\n`                    | reference previous captures where n is the group index starting at 1 | `(b)(\w*)\1`                   | `blob`<br/>`brib`e                       | bear<br/>bring          |
-| `\k<name>`              | reference named captures                                             | `(?<first>5)(\d*)\k<first>`    | `51245`<br/>`55`                         | 523<br/>51              |
+Match characters repeated a number of times.
 
-## Lookahead
+| **Syntax** | **Description**                        | **Example**        | **Matches**         | **Non-matches**     |
+| ---------- | -------------------------------------- | ------------------ | ------------------- | ------------------- |
+| `x*`       | 0 or more                              | `ar*o`             | `ao`, `arro`        | art, arugula        |
+| `x+`       | 1 or more                              | `re+`              | `ree`, `tree`       | ruin, root          |
+| `x?`       | 0 or 1                                 | `ro?a`             | `ra`, `roa`         | root, roar          |
+| `x{m}`     | Exactly m                              | `e{2}`             | `deer`, `sees`      | red, enter          |
+| `x{m,}`    | At least m                             | `2{3,}`            | `2224`, `2222224`   | `22`, `123`         |
+| `x{m,n}`   | Between m and n                        | `12{1,3}3`         | `123`, `1223`       | `15335`, `1222223`  |
+| `x+?`      | Lazy match (as few as possible)        | `re+?`             | `re`, `ree`         | `reel`, `reeee`     |
 
-You can specify that specific characters must appear before or after you match, without including those characters in the match.
+---
 
-| **Syntax** | **Description**                                                           | **Example pattern**          | **Example matches**        | **Example non-matches** |
-| ---------- | ------------------------------------------------------------------------- | ---------------------------- | -------------------------- | ----------------------- |
-| `(?=x)`    | looks ahead at the next characters without using them in the match        | `an(?=an)` <br/>`iss(?=ipp)` | b`an`ana<br/>Miss`issi`ppi | band<br/>missed         |
-| `(?!x)`    | looks ahead at next characters to not match on                            | `ai(?!n)`                    | f`ai`l<br/>br`ai`l         | faint<br/>train         |
-| `(?<=x)`   | looks at previous characters for a match without using those in the match | `(?<=tr)a`                   | tr`a`il<br/>tr`a`nslate    | bear<br/>streak         |
-| `(?<!x)`   | looks at previous characters to not match on                              | `(?!tr)a`                    | be`a`r<br/>tr`a`nslate     | trail<br/>strained      |
+## 🎯 Groups, Alternation & Backreferences
 
-## Literal matches and modifiers
+Group patterns, name them, or refer back to them.
 
-Modifiers are settings that change the way the matching rules work.
+| **Syntax**      | **Description**                          | **Example**             | **Matches**                    | **Non-matches**         |
+| --------------- | ---------------------------------------- | ----------------------- | ------------------------------ | ----------------------- |
+| `(x)`           | Capturing group                         | `(iss)+`                | `Mississippi`                  | mist, persist           |
+| `(?:x)`         | Non-capturing group                     | `(?:ab)(cd)`            | `abcd` (captures `cd`)         | acbd                    |
+| `(?<name>x)`    | Named capture                           | `(?<a>\d)(?<b>\d)`      | `25` => a=`2`, b=`5`           | `x5`, `ab`              |
+| `(x|y)`         | Alternation (or)                        | `(re|ba)`               | `red`, `ban`                   | rant, bear              |
+| `\1`            | Backreference to group 1                | `(b)(\w*)\1`            | `bob`, `brib`                  | bear, bib               |
+| `\k<name>`      | Named backreference                     | `(?<x>5)\d*\k<x>`       | `51245`, `55`                  | 523, 51                 |
 
-| **Syntax**    | **Description**                                                                                                    | **Example pattern**                   | **Example matches**                       | **Example non-matches**               |
-| ------------- | ------------------------------------------------------------------------------------------------------------------ | ------------------------------------- | ----------------------------------------- | ------------------------------------- |
-| `\Qx\E`       | match start to finish                                                                                              | `\Qtell\E`<br/>`\Q\d\E`               | `tell`<br/>`\\d`                          | I'll tell you this<br/>I have 5 coins |
-| `(?i)x(?-i).` | set the regex string to case-insensitive                                                                           | `(?i)te(?-i)`                         | s`T`ep<br/>`tE`ach                        | Trench<br/>bear                       |
-| `(?x)x(?-x)`  | regex ignores whitespace                                                                                           | `(?x)t a p(?-x)`                      | `tap`<br/>`tap`dance                      | c a t<br/>rot a potato                |
-| `(?s)x(?-s)`  | turns on single-line/DOTALL mode which makes the “.” include new-line symbols (\\n) in addition to everything else | `(?s)first and second(?-s) and third` | `first and`<br/>`Second and third`        | first and<br/>second<br/>and third    |
-| `(?m)x(?-m)`  | changes ^ and $ to be end of line rather than end of string                                                        | `^eat and sleep$`                     | `eat and sleep`<br/>`eat and`<br/>`sleep` | treat and sleep<br/>eat and sleep.    |
+---
 
-## Unicode
+## 🔍 Lookaround
 
-Regular expressions can work beyond the Roman alphabet, with things like Chinese characters or emoji.
+Match based on what’s *before* or *after*, without capturing it.
 
-- Code Points: The hexadecimal number used to represent an abstract character in a system like unicode.
-- Graphemes: Is either a codepoint or a character. All characters are made up of one or more graphemes in a sequence.
+| **Syntax** | **Description**                        | **Example**           | **Matches**         | **Non-matches**     |
+| ---------- | -------------------------------------- | --------------------- | ------------------- | ------------------- |
+| `(?=x)`    | Positive lookahead                     | `an(?=an)`            | `banana`, `ananas`  | `band`              |
+| `(?!x)`    | Negative lookahead                     | `ai(?!n)`             | `fail`, `bail`      | `faint`, `train`    |
+| `(?<=x)`   | Positive lookbehind                    | `(?<=tr)a`            | `trail`, `track`    | `streak`, `bear`    |
+| `(?<!x)`   | Negative lookbehind                    | `(?<!tr)a`            | `bear`, `stare`     | `trail`, `strain`   |
 
-| **Syntax** | **Description**                                   | **Example pattern**      | **Example matches**            | **Example non-matches** |
-| ---------- | ------------------------------------------------- | ------------------------ | ------------------------------ | ----------------------- |
-| `\X`       | match graphemes                                   | `\u0000gmail`            | `@gmail`<br/>www.email`@gmail` | gmail<br/>@aol          |
-| `\X\X`     | match special characters like ones with an accent | `\u00e8 or \u0065\u0300` | `è`                            | e                       |
+---
 
-## Resources
+## 🛠️ Modifiers and Literals
 
-1. https://www.datacamp.com/cheat-sheet/regular-expresso
+Control the behavior of the pattern engine.
+
+| **Syntax**        | **Description**                              | **Example**                       | **Matches**                | **Non-matches**          |
+| ----------------- | -------------------------------------------- | --------------------------------- | -------------------------- | ------------------------ |
+| `\Q...\E`         | Escape entire literal block                  | `\Q{hello}\E`                     | `{hello}`                  | hello                    |
+| `(?i)...(?-i)`    | Case-insensitive within group                | `(?i)te(?-i)`                     | `Teach`, `Test`            | trench                   |
+| `(?x)...(?-x)`    | Ignore whitespace inside regex               | `(?x)t a p(?-x)`                  | `tap`, `tapdance`          | `t a p`, `ta p`          |
+| `(?s)...(?-s)`    | Dot matches newline (DOTALL)                 | `(?s)first.*third(?-s)`           | includes `\n`              | multiline mismatch       |
+| `(?m)^...$`       | Multiline mode for `^` and `$`               | `^eat and sleep$`                | full line matches          | mid-line only            |
+
+---
+
+## 🌐 Unicode & Graphemes
+
+Work with extended character sets, including emoji and accents.
+
+| **Syntax** | **Description**                       | **Example**               | **Matches**      | **Non-matches** |
+| ---------- | ------------------------------------- | ------------------------- | ---------------- | --------------- |
+| `\X`       | Match one grapheme cluster            | `\X\X` on `🇺🇸`            | full emoji flag  | half emoji      |
+| `\uXXXX`   | Unicode character by code point       | `\u00e8` or `\u0065\u0300` | `è`              | `e`             |
+
+---
+
+## 📚 Resources
+
+- [Datacamp Regex Cheat Sheet](https://www.datacamp.com/cheat-sheet/regular-expresso)
+- [Regex101 (Live Tester)](https://regex101.com/)
+- [MDN Regex Guide](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions)
