--- a/content/230304_2057.mdx
+++ b/content/230304_2057.mdx
@@ -3,24 +3,26 @@ import { Steps } from "nextra/components";
 
 # Steps to Download Restricted Google Drive PDF
 
-## Simple medthod
+## Simple Method
 
-Here are the simple steps to download view-only protected PDF from Google Drive using Chrome browser:
+Follow these simple steps to download a view-only protected PDF from Google Drive using Chrome browser:
 
 <Steps>
 ### Step 1
 
-Open the PDF file on your Chrome Browser. Let the file load completely and scroll to the bottom of the page.
-![Steps to download restricted Google Drive PDF](/assets/230304_2057/01.png)
+Open the PDF file in your Chrome browser. Wait for the file to load completely, then scroll to the bottom of the page.
+
+![Step 1](/assets/230304_2057/01.png)
 
 ### Step 2
 
-Now open `Developer Console` by pressing `Ctrl`+ `Shift` + `C` (`F12`) for Windows or `Cmd` + `Shift` + `C` for Mac. Then click on `Console` tab.
-![Steps to download restricted Google Drive PDF](/assets/230304_2057/02.png)
+Open the **Developer Console** by pressing `Ctrl` + `Shift` + `C` (`F12`) on Windows or `Cmd` + `Shift` + `C` on Mac. Then, click the **Console** tab.
+
+![Step 2](/assets/230304_2057/02.png)
 
 ### Step 3
 
-Now paste the this script in the `Developer Console` and hit `Enter`.
+Paste the following script into the **Developer Console** and press `Enter`:
 
 ```js copy
 let jspdf = document.createElement("script");
@@ -49,48 +51,51 @@ jspdf.src = "https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js";
 document.body.appendChild(jspdf);
 ```
 
-![Steps to download restricted Google Drive PDF](/assets/230304_2057/03.png)
+![Step 3](/assets/230304_2057/03.png)
 
 ### Step 4
 
-When everything has done, the PDF file will be downloaded.
-![Steps to download restricted Google Drive PDF](/assets/230304_2057/04.png)
+Once the process is complete, the PDF file will be automatically downloaded.
+
+![Step 4](/assets/230304_2057/04.png)
 
 </Steps>
 
-## Advanced medthod
+## Advanced Method
 
-The simple JS method works for simple PDF files, but if you wish to download large PDF files with complex orientation in high quality, then the simple JS code may not work that great, here you can try this advanced trick to save the download protected Google Drive PDF.
+The simple JavaScript method works well for basic PDFs, but if you're dealing with large or complex PDFs, the download might not work as expected. For better quality and handling of complex PDFs, try the advanced method.
 
 <Steps>
 ### Step 1
 
-Download [Google Drive PDF Downloader](https://github.com/zeltox/Google-Drive-PDF-Downloader/archive/refs/heads/master.zip) file and extract the content. Open `Method_1_Script.js`. Then copy the script into `Developer Console` and press `Enter`.
-![Steps to download restricted Google Drive PDF](/assets/230304_2057/05.png)
+Download the [Google Drive PDF Downloader](https://github.com/zeltox/Google-Drive-PDF-Downloader/archive/refs/heads/master.zip) file and extract its contents. Open the `Method_1_Script.js` file, copy the script inside, and paste it into the **Developer Console**, then press `Enter`.
+
+![Step 1](/assets/230304_2057/05.png)
 
 ### Step 2
 
-After few seconds the browser will prompt you to save a file with extension `*.PDF_DataFile"`. Save this file and copy it into the `Input` directory which is inside the folder you downloaded earlier.
-![Steps to download restricted Google Drive PDF](/assets/230304_2057/06.png)
-![Steps to download restricted Google Drive PDF](/assets/230304_2057/07.png)
+After a few seconds, the browser will prompt you to save a file with the `.PDF_DataFile` extension. Save the file and move it to the `Input` directory located inside the folder you downloaded.
+
+![Step 2](/assets/230304_2057/06.png)
+![Step 2](/assets/230304_2057/07.png)
 
 ### Step 3
 
-If you are using Windows then navigate to `Windows` folder and double click on `GeneratePDF.cmd`. If you are using Linux then navigate to `Linux` folder and execute `GeneratePDF`.
-![Steps to download restricted Google Drive PDF](/assets/230304_2057/08.png)
+If you're using **Windows**, navigate to the `Windows` folder and double-click on `GeneratePDF.cmd`. For **Linux**, go to the `Linux` folder and execute `GeneratePDF`.
+
+![Step 3](/assets/230304_2057/08.png)
 
 ### Step 4
 
-A successful message will be shown once the whole process completes. Navigate to the `Output` folder and enjoy.
+Once the process is complete, you’ll see a success message. Check the `Output` folder to find the downloaded PDF.
 
 </Steps>
 
 <Callout type="info" emoji="💡">
-  You can use `Method_2_Script.js` only for PDF with less than 20 pages, if you
-  experience any errors or slow down then follow `Method_1_Script.js`
+  Use `Method_2_Script.js` only for PDFs with fewer than 20 pages. If you encounter errors or slow performance, use `Method_1_Script.js`.
 </Callout>
 
 ## Resources
 
-1. https://bytesbin.com/download-view-only-pdf-google-drive
-1. https://github.com/zeltox/Google-Drive-PDF-Downloader
+1. [Download View-Only PDFs from Google Drive](https://bytesbin.com/download-view-only-pdf-google-drive)
+2. [Google Drive PDF Downloader on GitHub](https://github.com/zeltox/Google-Drive-PDF-Downloader)
