--- a/content/230914_1034.mdx
+++ b/content/230914_1034.mdx
@@ -1,37 +1,43 @@
 import { Callout } from "nextra/components";
 
-# Download Videos and MP3s from YouTube
+# 📥 Download Videos and MP3s from YouTube
 
-## Requirements
+## ✅ Requirements
 
-- [yt-dlp](https://github.com/yt-dlp/yt-dlp)
-- [ffmpeg](https://ffmpeg.org)
+- [yt-dlp](https://github.com/yt-dlp/yt-dlp) – Modern fork of youtube-dl
+- [ffmpeg](https://ffmpeg.org) – Required for audio processing and conversion
 
 <Callout type="info">
-  Make sure you have `yt-dlp` and `ffmpeg` installed before executing the
-  commands. `yt-dlp` is a powerful command-line tool that offers additional
-  features compared to the traditional YouTube downloader. `ffmpeg` is required
-  for the audio extraction and conversion process.
+  Ensure both <code>yt-dlp</code> and <code>ffmpeg</code> are installed and accessible from your terminal.
+  <code>yt-dlp</code> is a powerful tool with support for more sites, better performance, and additional features compared to older downloaders. <code>ffmpeg</code> is used to handle audio extraction and conversion.
 </Callout>
 
-## Download a video from YouTube
+---
 
-To download a video from YouTube, use the following command:
+## 🎥 Download a Video from YouTube
 
-```bash
-yt-dlp <YouTube video URL>
+Use the following command to download a full video:
+
+```bash copy
+yt-dlp "<YouTube video URL>"
+````
+
+This downloads the best available quality by default.
+
+---
+
+## 🎵 Download an MP3 from YouTube
+
+To extract audio in MP3 format from a YouTube video:
+
+```bash copy
+yt-dlp --extract-audio --audio-format mp3 "<YouTube video URL>"
 ```
 
-## Download an MP3 from YouTube
-
-To download an MP3 from YouTube, use the following command:
-
-```bash
-yt-dlp --extract-audio --audio-format mp3 <YouTube video URL>
-```
-
-<Callout>
-  Replace `<YouTube video URL>` with the URL of the YouTube video you want to download the MP3 from.
+<Callout type="tip">
+  Replace <code>&lt;YouTube video URL&gt;</code> with the actual URL of the video you want to download.
 </Callout>
 
-Once the download is complete, you will find the video or MP3 file in your current directory or the default download directory set by `yt-dlp`.
+<Callout type="info">
+  The resulting MP3 will be saved in your current working directory unless a different output path is specified using the <code>-o</code> flag.
+</Callout>
