chores: remove icons

--- a/content/230731_1000.mdx
+++ b/content/230731_1000.mdx
@@ -1,4 +1,4 @@
-# 🧪 Regular Expression Syntax Cheat Sheet
+# Regular Expression Syntax Cheat Sheet
 
 Regular expressions (regex or regexp) are patterns used to match character combinations in strings.
 
