--- a/content/230914_1034.mdx
+++ b/content/230914_1034.mdx
@@ -1,6 +1,6 @@
 import { Callout } from "nextra/components";
 
-# 📥 Download Videos and MP3s from YouTube
+# Download Videos and MP3s from YouTube
 
 ## ✅ Requirements
 
